--- a/index.html
+++ b/index.html
@@ -1,494 +1,11 @@
-<p><img src="https://image12.bookschina.com/2023/20231219/1/B9087084.jpg" alt="封面"></p><p>作者：陈金灿，苏山河，苏国珍</p><p>页数：360</p><p>出版社：科学出版社</p><p>出版日期：2023</p><p>ISBN：9787030746153</p><p>高清校对版pdf（带目录）</p>前往页尾底部查看PDF电子书<h2>内容简介</h2><p>内容包括：1.热力学定律，2.特别状态下系统的特性,3.理想气体,4.实际气体,5.热力学特性函数,6.广义卡诺循环,7.不可逆热力学循环,8.弱耗散热力学理论，9.热力学循环的BM图,10.量子工质,,11.热力学基本定律的量子表述，12.量子热力学循环,13.玻色－爱因斯坦凝聚,14.简并费米气体，15.新型热离子器件,16.布朗马达，17.涨落的热力学理论。主要内容是对教科书中热力学与统计物理理论的拓广与应用，既有理论上的意义，又有方法上的创新，并且在实际中具有应用价值。本书既不同于现有的热力学统计物理教科书，又有别于相关的专著。</p><h2>目录</h2><div id="catalogSwitch">
-    目录 
-
-前言 
-
-第一版前言 
-
-第1章 热力学定律 1 
-
-1.1 对热力学第二定律两种经典表述的讨论 1 
-
-1.2 对热力学第三定律的讨论 6 
-
-1.3 由比热容随正绝对温度趋于零导出能斯特定理 10 
-
-1.4 热力学定律与数学不等式 11 
-
-参考文献 18 
-
-第2章 极端状态下系统的特性 20 
-
-2.1 T=+0K及T=-0K状态的特性 20 
-
-2.2 T=+0K及T=-0K状态的涨落特性 23 
-
-2.3 T=±∞状态的特性 27 
-
-2.4 T=±∞状态的涨落特性 30 
-
-2.5 T=±∞时是否存在新的热力学定律 31 
-
-2.6 （最/最）T→∞的状态 33 
-
-参考文献 37 
-
-第3章 理想气体 38 
-
-3.1 多方过程的基本特征 38 
-
-3.2 理想气体任一过程的热容及其应用 41 
-
-3.3 热力过程吸热与放热的简便判断方法 44 
-
-3.4 强迫绝热等熵过程 47 
-
-3.5 理想气体与热力学第三定律不相容 49 
-
-参考文献 51 
-
-第4章 实际气体 52 
-
-4.1 实际气体任意过程的热容 52 
-
-4.2 范德瓦耳斯气体的准静态绝热方程 56 
-
-4.3 在任意过程中实际气体的特性 57 
-
-4.4 关于焦耳实验和焦耳 汤姆孙实验结果的讨论 62 
-
-4.5 范德瓦耳斯气体与热力学第三定律不相容 64 
-
-参考文献 65 
-
-第5章 热力学特性函数 67 
-
-5.1 余函数的特性函数 67 
-
-5.2 由余函数的特性函数求范德瓦耳斯气体的性质 72 
-
-5.3 通用的热力学特征函数 74 
-
-参考文献 78 
-
-第6章 广义卡诺循环 79 
-
-6.1 理想气体卡诺循环 79 
-
-6.2 非理想气体卡诺循环 81 
-
-6.3 强迫卡诺循环 83 
-
-6.4 类卡诺循环 86 
-
-6.5 类卡诺磁制冷循环 94 
-
-6.6 最大输出功时广义卡诺热机的效率 96 
-
-6.7 包含负绝对温度的热力学循环 103 
-
-参考文献 110 
-
-第7章 不可逆热力学循环 112 
-
-7.1 有限时间热力学的特征 112 
-
-7.2 内可逆广义卡诺循环 118 
-
-7.3 内可逆循环理论在超导相变中的应用 123 
-
-7.4 太阳能驱动热机 126 
-
-7.5 半导体温差发电器 131 
-
-7.6 不可逆吸收式制冷机 136 
-
-7.7 不可逆化学机 145 
-
-参考文献 151 
-
-第8章 弱耗散热力学循环 158 
-
-8.1 弱耗散卡诺循环 158 
-
-8.2 弱耗散广义卡诺循环 161 
-
-8.3 弱耗散类卡诺循环 165 
-
-8.4 弱耗散化学热机 167 
-
-参考文献 174 
-
-第9章 热力学循环的犅犅图 179 
-
-9.1 卡诺循环的BB图 179 
-
-9.2 两类循环的BB图 181 
-
-9.3 三热源循环的BB图 183 
-
-9.4 逆向内可逆循环的BB图 186 
-
-9.5 不可逆卡诺循环的BB图 188 
-
-参考文献 190 
-
-第10章 量子工质 192 
-
-10.1 理想玻色气体 192 
-
-10.2 理想费米气体 196 
-
-10.3 自旋-1/2系统 199 
-
-10.4 谐振子系统 202 
-
-参考文献 204 
-
-第11章 热力学基本定律的量子表述 206 
-
-11.1 热力学第一定律的量子表述 206 
-
-11.2 不同表象下的功和热的表达式 209 
-
-11.3 热力学第二定律的量子表述 212 
-
-11.4 局域量子系统的热力学不等式 214 
-
-11.5 热力学第二定律的量子表述与经典表述的对应关系 216 
-
-参考文献 218 
-
-第12章 量子热力学循环 221 
-
-12.1 玻色埃里克森制冷循环 222 
-
-12.2 费米布雷顿制冷循环 228 
-
-12.3 自旋布雷顿制冷循环 233 
-
-12.4 谐振子系统制冷循环 240 
-
-参考文献 250 
-
-第13章 玻色 爱因斯坦凝聚 253 
-
-13.1 自由理想玻色系统性质的统一描述 254 
-
-13.2 有限尺度玻色系统 257 
-
-13.3 外势约束下的玻色气体 262 
-
-13.4 非理想玻色气体 267 
-
-13.5 相对论玻色气体 273 
-
-参考文献 280 
-
-第14章 简并费米气体 282 
-
-14.1 有限尺度费米系统 282 
-
-14.2 外势约束下的费米气体 287 
-
-14.3 相互作用费米气体 292 
-
-14.4 相对论费米气体 295 
-
-参考文献 303 
-
-第15章 新型热离子器件 304 
-
- 15.1 基于能量选择通道的热离子器件 304 
-
- 15.2 光增热离子器件 309 
-
- 15.3 石墨烯热离子器件 316 
-
- 15.4 器件性能的优化分析 317 
-
-参考文献 321 
-
-第16章 布朗马达 324 
-
-16.1 布朗运动 325 
-
-16.2 热驱动布朗马达 331 
-
-16.3 闪烁布朗马达 335 
-
-参考文献 338 
-
-第17章 涨落的热力学理论 341 
-
-17.1 涨落的均强定理 341 
-
-17.2 涨落的热力学方法 344 
-
-17.3 熵表象中的涨落热力学方法 348 
-
-参考文献 350
-</div>
-<p><img src="https://image12.bookschina.com/2023/20231218/2/B9087167.jpg" alt="封面"></p><p>作者：Sendpoints善本</p><p>页数：279</p><p>出版社：人民邮电出版社</p><p>出版日期：2023</p><p>ISBN：9787115607928</p><p>高清校对版pdf（带目录）</p>前往页尾底部查看PDF电子书<h2>内容简介</h2><p>从名片、手提袋、包装，再到周边商品，这些需要吸人眼球的好设计。饮食、时尚、IT和文化这四大领域蕴含着巨大商机。学会设计好 Logo，会让你放大商品的特殊性，增加品牌的风格和感染力。本书收录了超过100个案例，是一本有关视觉灵感的指导手册，旨在引领读者开启用风格为品牌赚钱的大门。本书包括迪士尼、Apple、Toyota、麦当劳、Johnnie Walker等工作室的品牌设计灵感介绍，以及各种好Logo的新风格和新流行趋势的超前点拨。
-本书适合设计师及设计相关专业学生阅读、参考。</p><h2>作者简介</h2><p>SendPoints善本图书，专业的设计类图书出版、发行商之一。扎扎实实地为中国设计水平贡献我们的一份责任，我们有一个理想：开放一个创意流动的窗口给设计师带来无限的灵感与惊喜，推动创意产业的发展，让世界都充满感。SendPoints出版的图书涵盖二十几个国家和地区，得到业界广泛的认同与推荐。
-SendPoints致力于平面设计、建筑设计、室内设计等专业图书。</p><h2>本书特色</h2><p>
-1.提供了111个设计案例，涵盖饮食、时尚、IT和文化等四大领域的品牌设计灵感介绍。<br/><br/>
-2.强调了好的设计对于名片、手提袋、包装、周边商品等的重要性，教授读者如何设计好的Logo，以增加品牌的风格和感染力。<br/><br/>
-3.包括了新的Logo风格和时尚新趋势的点拨，旨在帮助读者开启用风格为品牌赚钱的大门。该书适合设计师和设计相关专业学生阅读、参考。<br/><br/>
-4.书中的饮食部分收录了餐厅、烘焙坊、咖啡厅、食物料理、市集、食品、酒类等各种饮食场景的设计案例，包括 Denkstudio、Mantra、Susy's Bakery、San Mateo Frozen Seafood、Beerophilia Club等品牌。<br/><br/>
-4.时尚部分包括了服饰、皮具、首饰、美妆时尚等领域的设计案例，如Faupè、Lo Esencial、Gripoix、The Beauty Candy Apothecary等品牌。<br/><br/>
-5.IT部分收录了设计师分享和手机App、信息科技、营销分析等方面的设计案例，如Moodley Brand Identity、Silver、Hyper Verge、Research Mogul等品牌。<br/><br/>
-6.文化部分收录了Bullet Inc.和Fuji等文化类品牌的设计案例。 
-                                        </p><h2>目录</h2><div id="catalogSwitch">
-    第 1章 饮食类 Food &amp; Beverage<br/><br/>
-设计工作室/设计师分享<br/><br/>
-008	Denkstudio<br/><br/>
-010	Benua Farm <br/><br/>
-012	Tegusu<br/><br/>
-014	Allegrezza<br/><br/>
-餐厅<br/><br/>
-016	Mantra<br/><br/>
-020	BA 53<br/><br/>
-024	Nota Bene<br/><br/>
-026	Burger Chic	<br/><br/>
-028	Lovnis	<br/><br/>
-030	Wine Republic<br/><br/>
-032	Viscvle Deli<br/><br/>
-034	Alt. Pizza<br/><br/>
-036	Calicano Restaurant<br/><br/>
-038	Cooklyn<br/><br/>
-040	Café Con Leche<br/><br/>
-烘焙坊<br/><br/>
-044	Slodki Komin<br/><br/>
-045	Broodje Van Eigen Deeg<br/><br/>
-046	Brighton Bakery<br/><br/>
-048	Bro/d<br/><br/>
-050	Susy's Bakery <br/><br/>
-052	A Bread Affair Bakery<br/><br/>
-咖啡厅<br/><br/>
-054	Plato<br/><br/>
-058	Tokyo Cafe<br/><br/>
-062	Harajucube Café<br/><br/>
-饭店<br/><br/>
-064	Villa Vitele <br/><br/>
-食物料理<br/><br/>
-068	Aborígens Barcelona<br/><br/>
-市集<br/><br/>
-070	Mercato Piazza Foroni<br/><br/>
-食品<br/><br/>
-072	Subisǘ<br/><br/>
-076	Chen Nguyen<br/><br/>
-078	Muelle 38<br/><br/>
-082	San Mateo Frozen Seafood<br/><br/>
-084	Ko/ltzow<br/><br/>
-088	Amola Salt<br/><br/>
-090	Neleman's Chocolade Bar<br/><br/>
-092	Ayumi Kinoko <br/><br/>
-094	Kyoto Nakasei<br/><br/>
-096	Varenievar<br/><br/>
-酒类<br/><br/>
-097	Beerophilia Club<br/><br/>
-098	Creola  <br/><br/>
-100	Barley &amp; Hops<br/><br/>
-102	Eastlake Craft Brewery<br/><br/>
-106	Miin Brewery <br/><br/>
-110	Yono<br/><br/>
-112	Ariki<br/><br/>
-<br/><br/>
-第 2章 时尚类 Fashion<br/><br/>
-设计师分享<br/><br/>
-116	Oscar Bastidas (A.K.A MOR8)<br/><br/>
-118	Moon Fox<br/><br/>
-120	Lundgren Lindqvist<br/><br/>
-122	Elvine<br/><br/>
-服饰<br/><br/>
-124	Faupè<br/><br/>
-128	Pinstripe Punk<br/><br/>
-130	Blowhammer<br/><br/>
-132	Antons Datter <br/><br/>
-134	Lattaro Maglietta<br/><br/>
-136	Anne De Grijff<br/><br/>
-138	Wehve<br/><br/>
-140	Hikeshi<br/><br/>
-142	Mynt 1792<br/><br/>
-143	Rekka<br/><br/>
-144	Rawganique<br/><br/>
-146	Modacc<br/><br/>
-皮具<br/><br/>
-148	Lo Esencial<br/><br/>
-150	Junkard Company <br/><br/>
-首饰<br/><br/>
-154	Cipcip<br/><br/>
-156	Gripoix <br/><br/>
-美妆时尚<br/><br/>
-158	The Beauty Candy Apothecary<br/><br/>
-160	花玄木里<br/><br/>
-162	This Is Velvet<br/><br/>
-164	Answer Communications<br/><br/>
-沙龙<br/><br/>
-166	J'Adore Hair Beauty &amp; Tanning<br/><br/>
-167	Bros Hair <br/><br/>
-168	Roost<br/><br/>
-<br/><br/>
-第3章 IT 类 IT<br/><br/>
-设计师分享<br/><br/>
-172	Moodley Brand Identity<br/><br/>
-174	Freee Way <br/><br/>
-176	2veinte<br/><br/>
-178	Disney XD <br/><br/>
-手机 App<br/><br/>
-180	Silver<br/><br/>
-182	Sixdots<br/><br/>
-184	Kawa<br/><br/>
-186	Gasoline<br/><br/>
-188	O2<br/><br/>
-190	Porto Canal <br/><br/>
-信息科技<br/><br/>
-192	Core IT <br/><br/>
-194	Hyper Verge <br/><br/>
-196	Quantifier <br/><br/>
-198	Telecom SB<br/><br/>
-条形码<br/><br/>
-200	Zebra Technologies <br/><br/>
-票务平台<br/><br/>
-202	Paydro <br/><br/>
-营销分析<br/><br/>
-204	Pride<br/><br/>
-208	Research Mogul <br/><br/>
-210	Surge<br/><br/>
-<br/><br/>
-第4章 文化类 Culture<br/><br/>
-设计师分享<br/><br/>
-214	Bullet Inc.<br/><br/>
-216	Fujisan Museum <br/><br/>
-218	Good Morning<br/><br/>
-220	10Dayfest	<br/><br/>
-博物馆<br/><br/>
-222	Jewish Museum<br/><br/>
-224	Pinneberg Museum<br/><br/>
-226	Spaces of Uncertainty<br/><br/>
-多元艺术空间<br/><br/>
-227	CoGrowLab<br/><br/>
-228	Mtrl Kyoto<br/><br/>
-232	Room One <br/><br/>
-234	Saastamoinen Foundation<br/><br/>
-236	Crea Cultura <br/><br/>
-电影制作<br/><br/>
-237	Asteroide Filmes<br/><br/>
-238	Mateusz Trusewicz<br/><br/>
-年度艺术节<br/><br/>
-240	The 9TH Film and Art Festival Two Riversides <br/><br/>
-242	Fart  <br/><br/>
-244	Material Art Fair<br/><br/>
-246	University Music Festival<br/><br/>
-248	Bregenzer Festspiele<br/><br/>
-歌剧院<br/><br/>
-250	Saint-étienne Opera House<br/><br/>
-学校课程<br/><br/>
-254	Touré<br/><br/>
-256	EDIT. <br/><br/>
-258	Martin College<br/><br/>
-260	It's Easy <br/><br/>
-262	HBO-ICT <br/><br/>
-264	Direction éducation Chalon-sur-Saǒne <br/><br/>
-266	CPU
-</div>
-<p><img src="https://image12.bookschina.com/2023/20231218/2/B9087174.jpg" alt="封面"></p><p>作者：王慎军</p><p>页数：272</p><p>出版社：中国旅游出版社</p><p>出版日期：2023</p><p>ISBN：9787503269134</p><p>高清校对版pdf（带目录）</p>前往页尾底部查看PDF电子书<h2>内容简介</h2><p>《咖啡技艺与咖啡馆运营》教材对标新版咖啡师国家职业技能标准，介绍了咖啡的相关理论知识和咖啡的制作技艺，是一本理论与实践有机融合、以国内与国际咖啡行业为背景、特色鲜明的教材。主要内容有咖啡产业环境分析、咖啡生豆基础知识、咖啡烘焙、咖啡品鉴以及咖啡馆运营。本书编排设计短视频教学的形式，手机扫码即可观看教学视频，让读者在学习过程中更直观、更清晰地掌握咖啡调制的过程和技巧，全面提升学习效果。</p><h2>作者简介</h2><p>王慎军，上海旅游高等专科学校讲师。2015年，入选国家旅游局万名旅游英才计划双师型教师培养项目。2017年，入选上海市教育委员会“晨光计划”。上海市技师协会咖啡专业委员会委员。上海市职业技能鉴定中心经典咖啡制作与花式咖啡制作考评员。</p><h2>本书特色</h2><p>
-《咖啡技艺与咖啡馆运营》教材是上海旅游高等专科学校酒店管理与数字化运营一流专业建设子项目系列教材之一，该教材对标新版咖啡师国家职业技能标准，精品咖啡协会、咖啡品质研究所等国际行业标准，是一本理论与实践有机融合、以国内与国际咖啡行业为背景、特色鲜明的教材。 
-                                        </p><h2>目录</h2><div id="catalogSwitch">
-    项目一  咖啡产业认知篇/ 001
-任务一　咖啡的起源与传播/ 002
-一、咖啡的起源/ 002
-二、咖啡的传播史/ 004
-三、中国咖啡产业发展现状/ 010
-任务二　精品咖啡进化论/ 017
-一、精品咖啡三波浪潮/ 018
-二、中国现磨咖啡进化史/ 024
-项目二咖啡生豆基础/ 033
-任务三　世界咖啡产区/ 034
-一、世界咖啡产区概况/ 034
-二、非洲产区/ 036
-三、亚洲及大洋洲产区/ 042
-四、墨西哥及中美洲产区/ 045
-五、南美洲产区/ 050
-六、咖啡消费市场/ 055
-任务四　中国云南省咖啡产区概况/ 060
-一、德宏咖啡产区/ 061
-二、保山咖啡产区/ 063
-三、普洱咖啡产区/ 066
-四、临沧咖啡产区/ 071
-任务五　咖啡栽植与采收/ 073
-一、咖啡的植物学特征/ 073
-二、咖啡的品种/ 074
-三、从种植到采摘/ 078
-任务六　咖啡生豆的处理与发酵/ 084
-一、咖啡生豆的处理/ 085
-二、特殊发酵与处理/ 088
-任务七　咖啡生豆贸易/ 094
-一、咖啡生豆的储存与运输/ 097
-二、咖啡生豆的结构与成分/ 098
-三、瑕疵豆/ 102
-项目三咖啡烘焙/ 109
-任务八　烘焙基础知识/ 111
-一、认识烘焙机/ 111
-二、烘焙中的化学反应/ 113
-三、烘焙的流程/ 114
-四、烘焙度界定标准/ 116
-项目四咖啡品鉴/ 119
-任务九　咖啡感官/ 120
-一、咖啡品鉴之味道/ 120
-二、咖啡品鉴之风味/ 122
-三、咖啡品鉴之口感/ 142
-四、咖啡品鉴的整体平衡/ 145
-任务十　咖啡杯测认知/ 148
-一、杯测基础知识/ 148
-二、杯测的准则/ 149
-任务十一　咖啡杯测应用/ 152
-一、杯测评分表解读/ 152
-二、杯测评分表应用/ 153
-项目五咖啡馆运营/ 159
-任务十二　开档与闭档/ 160
-一、营业前准备/ 160
-二、迎送服务/ 166
-三、结束营业日/ 169
-任务十三　浓缩咖啡制作/ 171
-一、单份意式浓缩咖啡制作/ 171
-二、双份意式浓缩咖啡制作/ 176
-三、特浓意式浓缩咖啡制作/ 179
-四、长萃取意式浓缩咖啡制作/ 182
-五、冰意式浓缩咖啡制作/ 185
-任务十四　意式咖啡制作/ 197
-一、康宝兰咖啡制作/ 197
-二、玛奇朵咖啡制作/ 201
-三、美式咖啡制作/ 204
-四、拿铁咖啡制作/ 208
-五、卡布奇诺咖啡制作/ 212
-任务十五　拉花艺术/ 218
-一、心形拉花/ 218
-二、叶形拉花/ 226
-三、郁金香形拉花/ 233
-任务十六　花式咖啡制作/ 244
-一、冰美式咖啡制作/ 244
-二、冰拿铁咖啡制作/ 247
-三、摩卡咖啡制作/ 250
-四、焦糖玛奇朵咖啡制作/ 253
-五、维也纳咖啡制作/ 257
-任务十七　冲煮咖啡制作/ 263
-一、手冲咖啡萃取器具和原料/ 263
-二、手冲咖啡萃取参数/ 267
-三、手冲咖啡萃取技巧/ 269
-</div>
-<p><img src="https://image12.bookschina.com/2023/20231218/2/B9087187.jpg" alt="封面"></p><p>作者：黄申</p><p>页数：138</p><p>出版社：上海远东出版社</p><p>出版日期：2023</p><p>ISBN：9787547618875</p><p>高清校对版pdf（带目录）</p>前往页尾底部查看PDF电子书<h2>内容简介</h2><p>本书系统研究了合并会计报表存在的合法性问题，合并会计报表编制中的关键问题，并聚焦合并递延所得税、无股权时的合并报表和单方挂账的合并处理三个实务问题进行了研究。本书系统综合地运用法学、经济学理论，针对目前合并会计报表编制的基础——资产负债表观和利润表观的争论，结合近期新的计量变化提出“市价交易观”，并在此基础上进行论证，具有较强的新意。本书提出的合并会计报表编制的平等理论与合并商誉的企业文化观点，丰富了财务会计的合并报表理论，对形成具有中国特色的会计理论观点具有参考价值，运用于实际，对会计立法和相关会计准则的制定亦具有参考价值。</p><h2>作者简介</h2><p>黄申，西京学院会计学院副教授，拥有注册会计师、律师资格，在《会计研究》等核心期刊独立发表学术论文40多篇，主持国家社科（后期资助）2项，独立出版《财务会计概念框架之法学研究》等学术专著4部。主要研究领域：财务会计理论、合并会计报表。主要研究方法：会计的法律分析。</p><h2>本书特色</h2><p>
-创新、特色、趋同，建设有中国特色的合并报表会计理论。 
-                                        </p><h2>目录</h2><div id="catalogSwitch">
-    目    录
-<br/>前言<br/>章  绪论<br/>节  规范变迁与研究意义<br/>一、 规范变迁与启示<br/>二、 研究价值与意义<br/>第二节  研究思路与研究基础<br/>一、 会计研究的起点<br/>二、 会计研究的思路<br/>三、 会计研究的基础<br/>第三节  研究方法与主要内容<br/>一、 主要研究方法<br/>二、 主要研究内容
-第二章  合并报表法理依据挖掘<br/>节  法人独立时的合并情况<br/>一、 法人独立时的难以合并<br/>二、 不合并时的整体财务状况<br/>三、 独立性丧失后的依法合并<br/>第二节  合并报表法理挖掘思路<br/>一、 权能分离的逻辑<br/>二、 法人的三权分离<br/>三、 法人权能的分离<br/>第三节  法人权能分离逐项剖析<br/>一、 占有权能分离分析<br/>二、 使用权能分离分析<br/>三、 收益权能分离分析<br/>四、 处分权能分离分析<br/>第四节  本章小结
-第三章  合并报表内涵性质探寻<br/>节  权责混同的内涵<br/>一、 会计主体的内涵本质<br/>二、 主体混同的法律效果<br/>第二节  经营权责的混同<br/>一、 经营权责混同的表现<br/>二、 经营权责混同的依据<br/>第三节  行政权责的混同<br/>一、 行政权责混同的表现<br/>二、 行政权责混同的依据<br/>三、 行政权责混同的处理<br/>第四节  模拟权责的混同<br/>一、 模拟权责混同的需求<br/>二、 模拟权责混同的依据<br/>三、 模拟权责混同的处理<br/>第五节  本章小结
-第四章  合并报表公平理论移植<br/>节  合并报表的现有理论<br/>一、 合并报表的主流理论<br/>二、 我国学者的特有观点<br/>三、 不同理论的共同缺陷<br/>第二节  合并报表的公平理论<br/>一、 公平理论的法理依据<br/>二、 公平理论的技术规则<br/>第三节  公平理论的处理方法<br/>一、 两种会计处理方法<br/>二、 市场价格计量概念<br/>三、 市价计量的大趋势<br/>第四节  本章小结
-第五章  合并会计市价法论证<br/>节  购买法的法理与问题<br/>一、 购买法会计处理规则<br/>二、 会计处理的法律依据<br/>三、 会计处理问题与症结<br/>第二节  权益结合法的产生与存留<br/>一、 权益结合法的变迁<br/>二、 会计处理的法理依据<br/>三、 会计处理问题与消失<br/>第三节  合并会计的市价计量法<br/>一、 控股合并的法律实质<br/>二、 全面的市价计量方法<br/>第四节  本章小结
-第六章  商誉企业文化本质剖析<br/>节  合并价差构成剖析<br/>一、 商誉研究文献梳理<br/>二、 合并价差构成剖析<br/>三、 价差分析所引发的问题<br/>第二节  商誉内涵性质剖析<br/>一、 核心竞争力构成<br/>二、 企业文化构成<br/>三、 商誉的内涵性质<br/>第三节  商誉金额的计量方法<br/>一、 商誉金额计量方法<br/>二、 企业价值计量方法<br/>三、 商誉的市价计量法<br/>第四节  商誉信息披露<br/>一、 商誉信息披露现状<br/>二、 商誉信息披露完善<br/>三、 商誉问题暂行回答<br/>第五节  本章小结
-第七章  物价变动会计与外币报表折算<br/>节  市价交易计量法<br/>一、 反映真实的会计目标<br/>二、 市价交易计量的定位<br/>第二节  物价变动的市价计量<br/>一、 文献梳理与不同模式<br/>二、 不同领域的解决思路<br/>三、 物价问题的应对之策<br/>第三节  外币报表的单一汇率折算<br/>一、 主要方法与共同问题<br/>二、 汇率变动的机理辨析<br/>三、 单一汇率的化解路径<br/>四、 市价计量的充分披露<br/>第四节  本章小结
-第八章  研究总结与展望<br/>节  专家问题解答<br/>一、 会计职能与质量特征<br/>二、 智能化与事项法趋势<br/>第二节  本书观点总结<br/>一、 本书技术路线与内容<br/>二、 可能创新与研究不足<br/>第三节  会计研究展望<br/>一、 权责确认的展望<br/>二、 市价计量的展望<br/>三、 可能的研究方向
-主要参考文献
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>我的第一个 GitHub 网站</title>
+</head>
+<body>
+  <h1>Hello, GitHub Pages!</h1>
+  <p>这是我在 GitHub 上搭建的第一个网站 🎉</p>
+</body>
+</html>
